src/test/ui/union/union-generic.mirunsafeck.stderr
error[E0277]: the trait bound `Rc<u32>: Copy` is not satisfied
  --> $DIR/union-generic.rs:11:13
   |
LL |     let u = U { a: Rc::new(0u32) };
   |             ^ the trait `Copy` is not implemented for `Rc<u32>`
   |
note: required by `U`
  --> $DIR/union-generic.rs:6:1
   |
LL | union U<T: Copy> {
   | ^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Rc<u32>: Copy` is not satisfied
  --> $DIR/union-generic.rs:13:13
   |
LL |     let u = U::<Rc<u32>> { a: Default::default() };
   |             ^^^^^^^^^^^^ the trait `Copy` is not implemented for `Rc<u32>`
   |
note: required by `U`
  --> $DIR/union-generic.rs:6:1
   |
LL | union U<T: Copy> {
   | ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
